Use more model classes from moeralib.