@@ -2,12 +2,13 @@ package org.moera.node.rest;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
-import jakarta.validation.Valid;
 
+import org.moera.lib.node.types.ReactionTotalsFilter;
 import org.moera.lib.node.types.ReactionTotalsInfo;
 import org.moera.lib.node.types.Scope;
 import org.moera.lib.util.LogUtil;
@@ -17,8 +18,8 @@ import org.moera.node.global.ApiController;
 import org.moera.node.global.NoCache;
 import org.moera.node.global.RequestContext;
 import org.moera.node.model.ObjectNotFoundFailure;
-import org.moera.node.model.ReactionTotalsFilter;
 import org.moera.node.operations.ReactionTotalOperations;
+import org.moera.node.util.Util;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -49,7 +50,7 @@ public class PostingReactionTotalsController {
         log.info("GET /postings/{postingId}/reaction-totals (postingId = {})", LogUtil.format(postingId));
 
         Posting posting = postingRepository.findByNodeIdAndId(requestContext.nodeId(), postingId)
-                .orElseThrow(() -> new ObjectNotFoundFailure("posting.not-found"));
+            .orElseThrow(() -> new ObjectNotFoundFailure("posting.not-found"));
         if (!requestContext.isPrincipal(posting.getViewE(), Scope.VIEW_CONTENT)) {
             throw new ObjectNotFoundFailure("posting.not-found");
         }
@@ -59,20 +60,25 @@ public class PostingReactionTotalsController {
 
     @PostMapping("/reaction-totals/search")
     @Transactional
-    public List<ReactionTotalsInfo> search(@Valid @RequestBody ReactionTotalsFilter filter) {
+    public List<ReactionTotalsInfo> search(@RequestBody ReactionTotalsFilter filter) {
         log.info("POST /postings/reaction-totals/search");
 
         if (filter.getPostings() == null || filter.getPostings().isEmpty()) {
             return Collections.emptyList();
         }
 
-        List<Posting> postings = postingRepository.findByNodeIdAndIds(requestContext.nodeId(), filter.getPostings())
-                .stream()
-                .filter(p -> requestContext.isPrincipal(p.getViewE(), Scope.VIEW_CONTENT))
-                .collect(Collectors.toList());
+        List<UUID> postingIds = filter.getPostings().stream()
+            .map(Util::uuid)
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .toList();
+        List<Posting> postings = postingRepository.findByNodeIdAndIds(requestContext.nodeId(), postingIds)
+            .stream()
+            .filter(p -> requestContext.isPrincipal(p.getViewE(), Scope.VIEW_CONTENT))
+            .collect(Collectors.toList());
         return reactionTotalOperations.getInfo(postings).stream()
-                .map(ReactionTotalOperations.ReactionTotalsData::getClientInfo)
-                .collect(Collectors.toList());
+            .map(ReactionTotalOperations.ReactionTotalsData::getClientInfo)
+            .collect(Collectors.toList());
     }
 
 }
